--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
 	"api_key": "",
-	"email": {
-		"username": "",
-		"password": ""
+	"discord": {
+		"token": "",
+		"allowed_user": ""
 	},
 	"ssid": "",
 	"coords": "",
