added room for dm'ing recipient about a new message on the display

--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,8 @@
 	"weather_api_key": "",
 	"discord": {
 		"token": "",
-		"allowed_user": ""
+		"allowed_sender": "",
+		"recipient": ""
 	},
 	"ssid": "",
 	"coords": "",
